# zenless-club-genshin-guides

./: .eslintrc.cjs  .gitignore  README.md  bun.lockb  guide.ts  kamisato_ayaka.html  kamisato_ayaka.json  package.json  published.json  raiden_shogun.html  raiden_shogun.json  tsconfig.json  yae_miko.html  yae_miko.json
.github/workflows/: build.yml
characters/: kamisato_ayaka.json  raiden_shogun.json  yae_miko.json
data/: kamisato_ayaka.md
data/characters/: kamisato_ayaka.md  raiden_shogun.md  yae_miko.md
parser/: Cargo.toml
parser/src/: main.rs  model.rs  utils.rs
src/: convert.ts  meta.ts  parser.ts  utils.ts
